@@ -1,5 +1,4 @@
 - check that it's handling correctly the wvdial modem connections
-- complete the locations stuff
 - add ISDN support
 - update user docs
 - drink some beer
